# fastapi-ci-provisioning

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  cloudrun.yaml  poetry.Dockerfile  pyproject.toml  readme.md
envs/: dev.env.sample
myapp/app/: app.py
myapp/assets/: users.html
myapp/clients/: __init__.py  clients.py
requirements/: common.txt  development.txt
tests/: conftest.py  test_integration.py
