[tool.poetry]
name = "myapp"
version = "0.1.1"
description = "A sample app for demonstration of python CI/CD and resource provisioning."
authors = ["Ilhan Cetin <iilhancetin@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
httpx = "^0.23.1"
requests = "^2.28.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
coverage = "^6.5.0"
sentry-sdk = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
