[tool.poetry]
name = "Some App"
version = "0.1.1"
description = "A sample app for demonstration of python CI/CD and resource provisioning."
authors = ["Ilhan Cetin <iilhancetin@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
httpx = "^0.27.0"
requests = "^2.32.3"
uvicorn = "^0.30.5"
jinja2 = "^3.1.2"
coverage = "^6.5.0"
sentry-sdk = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
